# Secure-Recovery

./: .gitignore  main.py  pyproject.toml  requirements.txt
advanced/: __init__.py
advanced/classifier/: __init__.py  content_classifier.py  entropy.py
advanced/encryption/: __init__.py  bitlocker_detector.py  luks_detector.py
advanced/raid/: __init__.py  assembler.py  detector.py
carving/: __init__.py  base_signature.py  chunk_reader.py  deduplicator.py  engine.py  registry.py  validator.py
carving/signatures/: __init__.py
carving/signatures/archives/: __init__.py  gzip.py  rar.py  sevenzip.py  zip.py
carving/signatures/documents/: __init__.py  docx.py  pdf.py  rtf.py
carving/signatures/images/: __init__.py  (+6 more)
cli/: __init__.py  wizard.py
disk/: __init__.py  bad_sector_map.py  imager.py  platform_devices.py  reader.py  write_blocker.py
filesystem/: __init__.py  ext.py  fat32.py  manager.py  models.py  ntfs.py
filesystem/fat32/: __init__.py  tree_builder.py
filesystem/ntfs/: __init__.py  tree_builder.py
forensics/: __init__.py  chain_of_custody.py  evidence_packager.py  hasher.py  report_generator.py  timeline.py
partition/: __init__.py  gpt.py  mbr.py  scanner.py
plugins/: heic_signature.py
recovery/: __init__.py  directory_tree.py  engine.py  fragment_handler.py  output_writer.py  strategy.py
tools/: profile_scan.py
ui/: __init__.py  app.py
ui/panels/: __init__.py  drive_panel.py  filetype_panel.py  log_panel.py  progress_panel.py  settings_panel.py
utils/: __init__.py  hex_utils.py  logger.py  platform_utils.py  size_formatter.py
(+11 files in other folders)
