[project]
name = "pyrecovery"
version = "1.0.0"
description = "Production-grade disk recovery & digital forensics tool"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "PyRecovery Contributors"}
]
keywords = ["forensics", "data-recovery", "disk-imaging", "file-carving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Recovery Tools",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "Pillow>=10.0",
]

[project.scripts]
pyrecovery = "main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = [
    "disk*",
    "carving*",
    "filesystem*",
    "partition*",
    "recovery*",
    "advanced*",
    "forensics*",
    "cli*",
    "ui*",
    "utils*",
    "plugins*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
